public/assets/css/phaser.css
/* Define the dimensions of the game canvas */
#phaser canvas {
  width: 94px;
  height: 54px;
}
@media (min-width: 320px) {
  @media (max-aspect-ratio: 16/9) {
    #phaser canvas {
      width: 100vw;
      height: 56.25vw;
    }
  }
  @media (min-aspect-ratio: 16/9) {
    #phaser canvas {
      width: 177.78vh;
      height: 100vh;
    }
  }
}
@media ((min-width: 1920px) and (min-height: 1080px)) {
  #phaser canvas {
    width: 1920px;
    height: 1080px;
  }
}

